# GDF

./: .buildinfo  .gitignore  Makefile  PSP_Moment_Check.py  README.md  axisfinder.py  basis_functions.html  biMax_emcee.py  biMax_fit_leastsqs.py  bimax_2D_slepians.py  bimax_fit_ubulk.py  bimax_init.py  bimax_model.py  bsplines.py  calc_moments.py  cartesian.html  coordinate_frame_functions.py  eval_Slepians.py  event_invertigation.py  ex_gyro_vdf.py  fft_image.py  fit_comparisions.py  functions.py  gdf_env.yml  genindex.html  getting_started.html  hybrid_ubulk.py  index.html  init_gdf.py  init_gdf_default.py  install.html  inv_CartSlep.py  inversion.py  main.py  main_2D_slepians.py  mcmc_ubulk.py  mcmc_ubulk_old.py  mcmc_ubulk_stash.py  mcmc_walker_and_step_diagnostic.py  misc_plotter.py  (+13 more)
SPAN-SPC/: setup_plot.py
_sources/: basis_functions.rst  getting_started.rst  index.rst  polar_cap.rst
deprecated_functions/: coordinate_frame_functions.py  inv_CartSlep.py
docs/source/: conf.py  (+5 more)
initializations/: init_params1.py  init_params10.py  init_params11.py  init_params12.py  init_params13.py  init_params14.py  init_params15.py  init_params16.py  init_params17.py  init_params18.py  init_params19.py  init_params2.py  init_params20.py  init_params21.py  init_params3.py  init_params4.py  init_params5.py  init_params6.py  init_params7.py  init_params8.py  init_params9.py
paper_plots/: init_plot_setup.py  mcmc_walker_step_diagnostic.py  plot_setup.py
slepian_templates/: devilliers.m  localization2D.m  svdslep3.m  swdisk.m  swspace2d.m
src/: functions.py  mics_funcs.py
(+34 files in other folders)
