[metadata]
# replace with your username:
name = gdf
version = 0.1
author = Srijan Bharati Das, Michael Terres
author_email = srijanbdas@alumni.princeton.edu, mterres@cfa.harvard.edu
description = Gyrotropic Distribution Function package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srijaniiserprinceton/GDF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = VDF, Solar Wind, Plasma Physics

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
tests = pytest; py

[options.packages.find]
where = .